--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,7 @@
   </dependencies>
 
   <build>
+    <finalName>ROOT</finalName>
     <plugins>
       <!-- Used to deploy to tomcat server -->
       <plugin>
