Change final name of war fix

--- a/pom.xml
+++ b/pom.xml
@@ -209,6 +209,7 @@
         <artifactId>maven-war-plugin</artifactId>
         <version>3.3.0</version>
         <configuration>
+          <warName>${warName}</warName>
           <failOnMissingWebXml>false</failOnMissingWebXml>
         </configuration>
       </plugin>
