--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,7 @@
           <username>${remote.user}</username>
           <password>${remote.password}</password>
           <update>true</update>
+          <path>/${warName}</path>
         </configuration>
       </plugin>
 
